--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ openai>=1.40.0
 nltk==3.9.1
 PyPDF2==3.0.1
 transformers==4.36.0
-torch==2.5.0
+torch==2.5.0+cpu --extra-index-url https://download.pytorch.org/whl/cpu
